<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/headerName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
<!--    android:text="Name"-->

    <Button
        android:id="@+id/buttonCredits"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonCredits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewStudyHours" />
<!--    android:text="CREDITS"-->

    <TextView
        android:id="@+id/textView2"
        style="@style/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/myName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
    <!--        android:text="Samantha Smith"-->


    <TextView
        android:id="@+id/textView3"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headerClassSchedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />
    <!--        android:text="Class Schedule"-->


    <TextView
        android:id="@+id/textView4"
        style="@style/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />
<!--    android:text="BCS 421 MW 9:25am - 10:40am"-->

    <TextView
        android:id="@+id/textView5"
        style="@style/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />
<!--    android:text="MTH 390 MW 10:50am - 12:05pm"-->

    <TextView
        android:id="@+id/textView6"
        style="@style/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
<!--    android:text="PSY 315 MW 12:15pm - 1:30pm"-->

    <TextView
        android:id="@+id/textView7"
        style="@style/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />
<!--    android:text="BCS 360 TR 12:15pm - 1:30pm"-->

    <TextView
        android:id="@+id/textView8"
        style="@style/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />
<!--    android:text="BCS 378 MW 3:05pm - 4:20pm"-->

    <TextView
        android:id="@+id/textView9"
        style="@style/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/class6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />
<!--    android:text="EGL 212 TR 1:40pm - 2:55pm"-->

    <TextView
        android:id="@+id/textView10"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headerWorkSchedule"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />
<!--    android:text="Work Schedule"-->

    <TextView
        android:id="@+id/textView11"
        style="@style/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />
<!--    android:text="F 5:30pm - 11:30pm"-->

    <TextView
        android:id="@+id/textView12"
        style="@style/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/work2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />
<!--    android:text="S 12:00pm - 5:00pm"-->

    <TextView
        android:id="@+id/textView13"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/headerCredits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />
<!--    android:text="Credits"-->

    <TextView
        android:id="@+id/textViewCredits"
        style="@style/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13" />
<!--    android:text="18"-->

    <TextView
        android:id="@+id/textView15"
        style="@style/Header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/headerStudyHours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewCredits" />
<!--    android:text="Optimal Study Hours"-->

    <TextView
        android:id="@+id/textViewStudyHours"
        style="@style/Normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hours"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView15" />
<!--    android:text="36"-->

    <Button
        android:id="@+id/buttonStudyHours"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/buttonStudyHours"
        app:layout_constraintStart_toEndOf="@+id/buttonCredits"
        app:layout_constraintTop_toBottomOf="@+id/textViewStudyHours" />
<!--    android:text="STUDY HOURS"-->

</androidx.constraintlayout.widget.ConstraintLayout>